# Markdown2Slack

./: .pre-commit-config.yaml  pyproject.toml
.github/workflows/: pipeline.yaml
tests/: test_app.py
